corrected UI in dark mode and fixed navbar

--- a/src/app/Utilities/navbar/navbar.component.scss
+++ b/src/app/Utilities/navbar/navbar.component.scss
@@ -62,7 +62,6 @@ button.navbar-toggler {
     background-color: #131417 !important;
     .navbar {
         background-color: #131417 !important;
-        height: 66px;
         .navbar-brand {
             display: none;
         }
