--- a/src/app/common-services/self-analysis/self-analysis.component.scss
+++ b/src/app/common-services/self-analysis/self-analysis.component.scss
@@ -114,6 +114,14 @@
             margin-top: 9vh;
         }
         
+        .heighfix {
+            height: 100vh;
+        }
+        
+        .marginHide2 {
+            padding-top: 8vh;
+        }
+        
         .dark {
             background-color: #161625;
             h2 {
@@ -134,6 +142,10 @@
             }
             .btn {
                 border-color: #161625;
+            }
+            .result-question {
+                background-color: #323f4b;
+                color: white;
             }
         }
         
